// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories admin user acts properly when all disabled 1`] = `
{
  "advertising": [],
  "analytics": [],
  "functional": [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories admin user acts properly when all enabled 1`] = `
{
  "advertising": [],
  "analytics": [
    "google_analytics",
    "satismeter",
  ],
  "functional": [
    "intercom",
  ],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories admin user acts properly when only satismeter disabled 1`] = `
{
  "advertising": [],
  "analytics": [
    "google_analytics",
  ],
  "functional": [
    "intercom",
  ],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories super admin user acts properly when all disabled 1`] = `
{
  "advertising": [],
  "analytics": [],
  "functional": [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories super admin user acts properly when all enabled 1`] = `
{
  "advertising": [],
  "analytics": [
    "google_analytics",
  ],
  "functional": [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories unsingned user acts properly when all disabled 1`] = `
{
  "advertising": [],
  "analytics": [],
  "functional": [],
}
`;

exports[`<ConsentManager /> parses tenant setting and user to show active destinations in categories unsingned user acts properly when all enabled 1`] = `
{
  "advertising": [],
  "analytics": [
    "google_analytics",
  ],
  "functional": [],
}
`;

exports[`<ConsentManager /> sets the cookie accept accepts all when no cookie was set 1`] = `
{
  "advertising": true,
  "analytics": true,
  "functional": true,
  "savedChoices": {
    "google_analytics": true,
  },
}
`;

exports[`<ConsentManager /> sets the cookie accept sets preferences to true when previous cookie was set without overwriting false values 1`] = `
{
  "advertising": false,
  "analytics": true,
  "functional": true,
  "savedChoices": {
    "google_analytics": true,
    "intercom": true,
    "satismeter": true,
  },
}
`;
